--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Migurinth - A Better Modrinth Fork</title>
-    <link rel="icon" href="assets/favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Prevent Flash of Unstyled Content (FOUC) */
+        body { opacity: 0; transition: opacity 0.3s ease-in-out; }
+    </style>
 </head>
-<body class="bg-gray-900 text-white flex flex-col items-center justify-center min-h-screen">
+<body class="bg-gray-900 text-white flex flex-col items-center justify-center min-h-screen" onload="document.body.style.opacity = '1'">
 
     <!-- Logo -->
-    <img src="assets/logo.webp" alt="Migurinth Logo" class="w-48 h-48 mb-4 rounded-lg">
+    <img src="logo.png" alt="Migurinth Logo" class="w-24 h-24 mb-4 rounded-lg">
 
     <!-- Title -->
     <h1 class="text-4xl font-bold">Migurinth</h1>
     <p class="text-lg text-gray-400 mt-2">A privacy-friendly Modrinth fork with no telemetry and no ads.</p>
 
-    <!-- Download Button -->
-    <a id="download-btn" href="https://github.com/MiguVT/migurinth/releases/latest" target="_blank" 
-        class="mt-6 px-6 py-3 text-lg font-semibold bg-green-600 hover:bg-green-700 transition rounded-lg opacity-0 pointer-events-none">
+    <!-- Download Button (Initially Hidden) -->
+    <a id="download-btn" href="#" target="_blank"
+       class="mt-6 px-6 py-3 text-lg font-semibold bg-green-600 hover:bg-green-700 transition rounded-lg opacity-0 pointer-events-none">
         Fetching latest version...
     </a>
 
