assets path updated

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Migurinth - A Better Modrinth Fork</title>
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="assets/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Prevent Flash of Unstyled Content (FOUC) */
@@ -14,7 +14,7 @@
 <body class="bg-gray-900 text-white flex flex-col items-center justify-center min-h-screen" onload="document.body.style.opacity = '1'">
 
     <!-- Logo -->
-    <img src="logo.png" alt="Migurinth Logo" class="w-24 h-24 mb-4 rounded-lg">
+    <img src="logo.webp" alt="Migurinth Logo" class="w-52 h-52 mb-4 rounded-lg">
 
     <!-- Title -->
     <h1 class="text-4xl font-bold">Migurinth</h1>
