--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="bg-gray-900 text-white flex flex-col items-center justify-center min-h-screen" onload="document.body.style.opacity = '1'">
 
     <!-- Logo -->
-    <img src="logo.webp" alt="Migurinth Logo" class="w-52 h-52 mb-4 rounded-lg">
+    <img src="assets/logo.webp" alt="Migurinth Logo" class="w-52 h-52 mb-4 rounded-lg">
 
     <!-- Title -->
     <h1 class="text-4xl font-bold">Migurinth</h1>
